--- a/public/stylesheets/terms-of-use.css
+++ b/public/stylesheets/terms-of-use.css
@@ -4,7 +4,6 @@
   padding-top: 0px;
   padding-left: 2vh;
   font-size: 100%;
-  background-color: var(--header-color);
 }
 
 p{
